--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -41,30 +41,48 @@ li {
     white-space: wrap;
     z-index: -1;
 }
-.header-div::after {
+// .header-div::after {
     
-    content: 'MODERN DESIGN';
-    display: block;
-    height: 100vh;
-    font-size: clamp(10rem, 25rem, 30rem);
-    text-transform: uppercase;
-    text-align: center;
-    font-family: "Bai Jamjuree", sans-serif;
-    font-weight: 600;
-    position: absolute;
-    top: 0;
-    animation-name: move;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    color: white;
-}
+//     content: 'MODERN DESIGN';
+//     display: block;
+//     height: 100vh;
+//     font-size: clamp(10rem, 25rem, 30rem);
+//     text-transform: uppercase;
+//     text-align: center;
+//     font-family: "Bai Jamjuree", sans-serif;
+//     font-weight: 600;
+//     position: absolute;
+//     top: 0;
+//     animation-name: move;
+//     animation-duration: 1s;
+//     animation-timing-function: ease-in-out;
+//     color: white;
+// }
+
+
 .header-img {
     width: 30%;
     position: absolute;
     right: 20%;
     z-index: -1;
+    filter: invert(100%);
 }
-
+.header-text {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    font-size: clamp(10rem, 25rem, 30rem);
+    text-transform: uppercase;
+    text-align: center;
+    font-family: "Bai Jamjuree", sans-serif;
+    font-weight: 600;
+    animation-name: move;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    z-index: 1;
+    color: #d53f41;
+    mix-blend-mode: difference;
+   
+}
 #header-text {
     margin-block-start: 0em;
     margin-block-end: 0em;
@@ -77,7 +95,9 @@ li {
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
     z-index: 1;
-    color: black;
+    color: #d53f41;
+    mix-blend-mode: difference;
+    
 }
 @keyframes move {
     from {
@@ -89,6 +109,7 @@ li {
         opacity: 1;
     }
 }
+
 .main-container {
     padding: 0 5vw;
   
